[gd_scene load_steps=5 format=3 uid="uid://ci2hclbtbekd8"]

[ext_resource type="Script" path="res://src/components/2d/bullet/bullet.gd" id="1_ar4sc"]
[ext_resource type="Texture2D" uid="uid://hbltpxl1gvtb" path="res://art/player_bullet.png" id="2_qvu4u"]
[ext_resource type="Texture2D" uid="uid://c73fobbtth6ir" path="res://art/enemy_bullet.png" id="3_llflx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6gcna"]
radius = 4.0

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ar4sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6gcna")

[node name="PlayerBullet" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_qvu4u")

[node name="EnemyBullet" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_llflx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
